Table user{
    id integer [pk, increment]
    name varchar(255)
    email varchar(255) [unique]
    password varchar(255)
    created_at datetime [default: `now()`]
    updated_at datetime [default: `now()`]
}

Table mascotas{
    id integer [pk, increment]
    user_id integer [ref: > user.id]
    nombre varchar(255)
    especie varchar(255)
    raza varchar(255)
    fecha_nacimiento date
    foto varchar(255)
}

Table pre_citas {
    id integer [pk, increment]
    mascota_id integer [ref: > mascotas.id]
    motivo text
    fecha_solicitada date
    rango_hora varchar(100) 
    estado enum('pendiente', 'aprobado', 'rechazado') [default: 'pendiente']
    observaciones text
}

Table citas{
    id integer [pk, increment]
    mascota_id integer [ref: > mascotas.id]
    veterinario_id integer [ref: > user.id]
    fecha_hora datetime
    motivo text
    estado enum('pendiente', 'confirmado', 'cancelado') [default: 'pendiente']
    
}
Table atenciones{
    id integer [pk, increment]
    cita_id integer [ref: > citas.id]
    diagnostico text
    tratamiento text
    observaciones text
}